--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,7 @@
 .App {
-  background-color: #282c34;
-  color: #ffffff;
-
   .content {
-    min-height: calc(100vh - 110px);
-    margin-top: 60px;
+    min-height: calc(100vh - 190px);
+    margin-top: 80px;
+    padding: 30px;
   }
 }
