--- a/src/components/LocaleSwitch/LocaleSwitch.scss
+++ b/src/components/LocaleSwitch/LocaleSwitch.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding-left: 10px;
 
   .flag-icon {
     cursor: pointer;
