Added styles and translations for the Movie component.

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,5 +3,7 @@
     min-height: calc(100vh - 190px);
     margin-top: 80px;
     padding: 30px;
+    display: flex;
+    justify-content: space-around;
   }
 }
