--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: #282c34;
+  z-index: 10;
 
   .logo {
     width: 60px;
