--- a/src/components/Movie/Movie.scss
+++ b/src/components/Movie/Movie.scss
@@ -1,3 +1,79 @@
 .movie {
+  width: 1000px;
+  display: flex;
+  align-items: flex-start;
+  background: #efefef;
+  color: #404040;
+  box-shadow: 5px 0px 10px #000, -5px 0px 10px #000;
 
+  .poster {
+    position: relative;
+    left: -5px;
+    top: -5px;
+    border: 2px solid #ffffff;
+  }
+
+  .rating {
+    display: block;
+    width: 100%;
+    text-align: center;
+
+    .details, .item {
+      font-size: 14px;
+      line-height: 30px;
+    }
+
+    span {
+      display: inline-block;
+    }
+    .full {
+      color: #fbcb05;
+    }
+    .empty {
+      color: #999999;
+    }
+    .half {
+      background: -webkit-linear-gradient(left, #fbcb05 49%, #999999 50%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+
+  .info {
+    padding: 10px 20px 30px 10px;
+
+    h1 {
+      font-size: 28px;
+    }
+
+    h2 {
+      font-size: 20px;
+    }
+
+    .item {
+      display: flex;
+      flex-direction: row;
+      line-height: 28px;
+      border-bottom: 1px #cccccc dashed;
+
+      .name {
+        width: 200px;
+        font-weight: 400;
+      }
+
+      .list {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+
+    .overview {
+      background: #ffffff;
+      border: 1px solid #cccccc;
+      display: block;
+      padding: 20px;
+      margin-top: 20px;
+      line-height: 25px;
+    }
+  }
 }
