--- a/src/components/Rating/Rating.scss
+++ b/src/components/Rating/Rating.scss
@@ -3,23 +3,25 @@
   width: 100%;
   text-align: center;
 
-  .details, .item {
-    font-size: 14px;
-    line-height: 30px;
-  }
-
   span {
     display: inline-block;
-  }
-  .full {
-    color: #fbcb05;
-  }
-  .empty {
-    color: #999999;
-  }
-  .half {
-    background: -webkit-linear-gradient(left, #fbcb05 49%, #999999 50%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+
+    .details, .item {
+      font-size: 14px;
+      line-height: 30px;
+      display: block;
+    }
+
+    &.full {
+      color: #fbcb05;
+    }
+    &.empty {
+      color: #999999;
+    }
+    &.half {
+      background: -webkit-linear-gradient(left, #fbcb05 49%, #999999 50%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
   }
 }
