--- a/src/components/LocaleSwitch/LocaleSwitch.scss
+++ b/src/components/LocaleSwitch/LocaleSwitch.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding-left: 10px;
+  padding: 0 20px;
 
   .flag-icon {
     cursor: pointer;
