--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -4,6 +4,8 @@
   margin-right: 10px;
   display: flex;
   align-items: center;
+  flex-grow: 1;
+  justify-content: flex-end;
 
   input {
     font-size: 18px;
