--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -15,6 +15,9 @@
     width: 300px;
     height: 35px;
     outline: none;
+    @media (max-width: 639px) {
+      width: auto;
+    }
   }
 
   button {
