--- a/src/components/MoviesList/MoviesList.scss
+++ b/src/components/MoviesList/MoviesList.scss
@@ -5,6 +5,7 @@
   width: 1000px;
 
   .item {
+    text-decoration: none;
     width: 480px;
     display: flex;
     align-items: flex-start;
@@ -13,7 +14,6 @@
     color: #404040;
     box-shadow: 5px 0px 10px #000, -5px 0px 10px #000;
     margin-bottom: 20px;
-    cursor: pointer;
     font-size: 14px;
 
     .poster {
